--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul class="flex padding">
           <li>Tariffazione</li>
           <li>Conti</li>
-          <li>Prodotti</li>
+          <li class="clicked">Prodotti</li>
           <div class="dis-none prodotti shadow">
             <ul>
               <li>Trasferimento di denaro</li>
@@ -31,7 +31,7 @@
               <li>Assicurazione medica internazonale</li>
             </ul>
           </div>
-          <li>Azienda</li>
+          <li class="clicked">Azienda</li>
           <div class="dis-none azienda shadow">
             <ul>
               <li>Chi Siamo</li>
